<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
    	android:layout_height="match_parent">
    
    <!-- Title elements -->
    
    <ImageView
        android:id="@+id/settingsIcon"
        android:src="@drawable/ic_menu_preferences"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitStart"
        android:background="#EE696969"
        android:contentDescription="@string/app_name" />    
    
    <TextView
        android:id="@+id/dialogTitle"
        android:text="@string/search_settings"
        android:textSize="20sp"
        android:textColor="#FFFFFFFF"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_toRightOf="@+id/settingsIcon"
        android:layout_toEndOf="@+id/settingsIcon"	            
        android:background="#EE696969" />    
        
    <!-- Seek Bar elements -->
    
    <TextView
        android:id="@+id/seekBarText"
        android:layout_below="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="#FF999999" />
    
    <CheckBox 
        android:id="@+id/checkboxAutoSearch"
        android:layout_below="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:text="@string/search_options_checkbox_text"
        android:textSize="20sp"
        android:textColor="#FF999999"/>
    
    <SeekBar 
        android:id="@+id/rangeBar"
        android:layout_below="@+id/seekBarText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:max="1000"
        android:progress="200" />
    
    <!-- Categories elements -->
    
    <!-- <View
    	android:id="@+id/settingsSeparator1"
    	android:layout_below="@+id/rangeBar"
    	android:layout_width="fill_parent"
    	android:layout_height="1dp"
    	android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
    	android:background="#FFFFFFFF"/>-->
    
    <TextView
        android:id="@+id/categorySelectionText"
        android:layout_below="@+id/rangeBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:text="@string/search_categories_label"
        android:textSize="20sp"
        android:textColor="#FF999999" />
    
    <RadioGroup 
	    android:id="@+id/radio_group"
	    android:layout_below="@+id/categorySelectionText"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <RadioButton android:id="@+id/radio_all"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/search_settings_radio_all"
	        android:textColor="#FF999999"/>
	    <RadioButton android:id="@+id/radio_food"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/search_settings_radio_food"
	        android:textColor="#FF999999"/>
	    <RadioButton android:id="@+id/radio_shopping"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/search_settings_radio_shopping"
	        android:textColor="#FF999999"/>
	    <RadioButton android:id="@+id/radio_entertainment"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/search_settings_radio_entertainment"
	        android:textColor="#FF999999"/>
	</RadioGroup>
    
</RelativeLayout>
